--- a/1.RoadMap-40h/Session-02-JSX-Components-Props/2.3.Add-style-Component.md
+++ b/1.RoadMap-40h/Session-02-JSX-Components-Props/2.3.Add-style-Component.md
@@ -20,7 +20,7 @@ Trong React bạn sử dụng CSS class với tên là className. Nó giống nh
 Đơn giản là các bạn sẽ import file css vào component bằng cách
 
 ```js
-import './App.css'
+import "./App.css";
 ```
 
 Lưu ý: Nếu bạn import css vào trong file App thì css đó sẽ có tính toàn cục (tức tất cả mọi nơi đều có thể sử dụng)
@@ -30,9 +30,9 @@ Lưu ý: Nếu bạn import css vào trong file App thì css đó sẽ có tính
 Trong React, inline styles không được viết dưới dạng string (chuỗi) như html thông thường. Thay vào đó nó sẽ được viết dưới dạng Object với key được viết theo kiểu camelCased còn style của value sẽ thường là kiểu string.
 
 ```js
-<div style={{backgroundColor: 'white', color: 'red'}}>Hello</div>
-
+<div style={{ backgroundColor: "white", color: "red" }}>Hello</div>
 ```
+
 Ngoài ra, chúng ta cũng có thể tạo một biến lưu trữ giá trị css rồi truyền nó vào các element như sau:
 
 ```js
@@ -40,7 +40,6 @@ const styleObject = {backgroundColor: 'white', color: 'red'}
 
 <div style={styleObject}>Hello</div>
 ```
-
 
 ### 🔥 3. CSS Module ?
 
@@ -62,7 +61,6 @@ Giúp bạn tránh bị xung đột css
 
 ```
 
-
 ### 🔥 4. Style Component (Advanced) ?
 
 Styled-components là một thư viện dành cho React và React Native cho phép bạn viết style ở cấp độ component trong ứng dụng của bạn
@@ -74,12 +72,9 @@ npm install styled-components --save
 - <https://styled-components.com/docs/basics#installation>
 - <https://viblo.asia/p/su-dung-styled-component-trong-react-63vKjjWyK2R>
 
-
-
 ### 🔥 5. Css Framework
 
 Nhúng các thư viện Css Framework: TailwindCss, Bootstrap
-
 
 ### 🔥 6. Sass (Advanced) ?
 
@@ -109,8 +104,8 @@ function MyComponent() {
   }
 }
 ```
-- Font Awesome: <https://fontawesome.com/v5/docs/web/use-with/react>
 
+- Font Awesome: <https://fontawesome.com/v5/docs/web/use-with/react>
 
 ## 🌻 Chèn hình vào React
 
@@ -124,12 +119,24 @@ Bước 2: Cách sử dụng hình
 
 Khi ứng dụng chạy thì thư mục public là thư mục gốc
 
-
 Hoặc với cách sau
 
 ```jsx
 //Import dưới dạng biến images
-import images from './images/ten-hinh.png';
-<img src={images} alt="" />
+import images from "./images/ten-hinh.png";
+<img src={images} alt="" />;
 ```
 
+Nếu sử dụng với React Vite bạn cần cấu hình thêm `vite.config.ts`
+
+```ts
+//Sửa hàm defineConfig thành như sau
+export default defineConfig({
+  root: "./",
+  build: {
+    outDir: "dist",
+  },
+  publicDir: "public",
+  plugins: [react()],
+});
+```
