--- a/1.RoadMap-40h/Session-10-Redux-Zustand/Manage-State/4.Zustand.md
+++ b/1.RoadMap-40h/Session-10-Redux-Zustand/Manage-State/4.Zustand.md
@@ -2,19 +2,18 @@
 
 ![Zustand](https://github.com/pmndrs/zustand/raw/main/bear.jpg)
 
-
 Zustand là một state management library nhanh và dễ dàng mở rộng đang được nhiều người quan tâm hiện nay. Nó được xây dựng bởi các lập trình viên đã tạo ra Jotai và React-springs. Zustand được biết đến bởi tính đơn giản và sử dụng hooks mà không cần theo một kiểu mẫu nhất định.
 
 **Cài đặt:**
 
 ```bash
 npm install zustand
+yarn add zustand
 ```
 
 Dùng cho TypeScript: <https://github.com/pmndrs/zustand#typescript-usage>
 
 Chúng ta cùng tìm hiểu qua ví dụ sau:
-
 
 ## bankSimple với Zustand
 
@@ -22,39 +21,40 @@ Bước 1: Tạo store
 
 ```js
 // bankStore.js
-import create from 'zustand';
+import { create } from "zustand";
 
 const useBankStore = create((set) => ({
   balance: 0,
-  withdrawMoney: (amount) => set((state) => ({ balance: state.balance - amount })),
-  depositMoney: (amount) => set((state) => ({ balance: state.balance + amount })),
+  withdrawMoney: (amount) =>
+    set((state) => ({ balance: state.balance - amount })),
+  depositMoney: (amount) =>
+    set((state) => ({ balance: state.balance + amount })),
 }));
 
 export default useBankStore;
-
 ```
 
 Bước 2: Tích hợp vào BankAccount Component
 
 ```js
 // BankAccount.js
-import React, { useState } from 'react';
-import useBankStore from './bankStore';
+import React, { useState } from "react";
+import useBankStore from "./bankStore";
 
 const BankAccount = () => {
-  const [amount, setAmount] = useState('');
+  const [amount, setAmount] = useState("");
   const balance = useBankStore((state) => state.balance);
   const withdrawMoney = useBankStore((state) => state.withdrawMoney);
   const depositMoney = useBankStore((state) => state.depositMoney);
 
   const handleWithdraw = () => {
     withdrawMoney(Number(amount));
-    setAmount('');
+    setAmount("");
   };
 
   const handleDeposit = () => {
     depositMoney(Number(amount));
-    setAmount('');
+    setAmount("");
   };
 
   return (
@@ -74,17 +74,16 @@ const BankAccount = () => {
 };
 
 export default BankAccount;
-
 ```
 
 Bước 3: Render ứng dụng
 
 ```js
 // App.js
-import React from 'react';
-import { Provider } from 'react-redux';
-import BankAccount from './BankAccount';
-import useBankStore from './bankStore';
+import React from "react";
+import { Provider } from "react-redux";
+import BankAccount from "./BankAccount";
+import useBankStore from "./bankStore";
 
 const App = () => {
   return (
@@ -98,11 +97,9 @@ const App = () => {
 };
 
 export default App;
-
 ```
 
 Cú pháp và cách sử dụng Zustand khá tương đồng với Redux, nhưng nó có cú pháp ngắn gọn và dễ dàng sử dụng hơn trong một số trường hợp đơn giản
-
 
 ## Ví dụ về Call API
 
@@ -122,10 +119,10 @@ Bước 2: Tạo Store và Các Hàm CRUD
 
 ```jsx
 // store.js
-import create from 'zustand';
-import axios from 'axios';
+import create from "zustand";
+import axios from "axios";
 
-const apiUrl = 'https://api.escuelajs.co/api/v1/products';
+const apiUrl = "https://api.escuelajs.co/api/v1/products";
 
 const useProductStore = create((set) => ({
   products: [],
@@ -138,8 +135,8 @@ const useProductStore = create((set) => ({
       const response = await axios.get(apiUrl);
       set({ products: response.data, isLoading: false });
     } catch (error) {
-      console.error('Error fetching products:', error);
-      set({ isLoading: false, error: 'Error fetching products' });
+      console.error("Error fetching products:", error);
+      set({ isLoading: false, error: "Error fetching products" });
     }
   },
 
@@ -147,10 +144,13 @@ const useProductStore = create((set) => ({
     try {
       set({ isLoading: true, error: null });
       const response = await axios.post(apiUrl, newProduct);
-      set((state) => ({ products: [...state.products, response.data], isLoading: false }));
+      set((state) => ({
+        products: [...state.products, response.data],
+        isLoading: false,
+      }));
     } catch (error) {
-      console.error('Error adding product:', error);
-      set({ isLoading: false, error: 'Error adding product' });
+      console.error("Error adding product:", error);
+      set({ isLoading: false, error: "Error adding product" });
     }
   },
 
@@ -160,27 +160,30 @@ const useProductStore = create((set) => ({
       await axios.delete(`${apiUrl}/${productId}`);
       set((state) => ({
         products: state.products.filter((product) => product.id !== productId),
-        isLoading: false
+        isLoading: false,
       }));
     } catch (error) {
-      console.error('Error deleting product:', error);
-      set({ isLoading: false, error: 'Error deleting product' });
+      console.error("Error deleting product:", error);
+      set({ isLoading: false, error: "Error deleting product" });
     }
   },
 
   updateProduct: async (productId, updatedProduct) => {
     try {
       set({ isLoading: true, error: null });
-      const response = await axios.put(`${apiUrl}/${productId}`, updatedProduct);
+      const response = await axios.put(
+        `${apiUrl}/${productId}`,
+        updatedProduct
+      );
       set((state) => ({
         products: state.products.map((product) =>
           product.id === productId ? response.data : product
         ),
-        isLoading: false
+        isLoading: false,
       }));
     } catch (error) {
-      console.error('Error updating product:', error);
-      set({ isLoading: false, error: 'Error updating product' });
+      console.error("Error updating product:", error);
+      set({ isLoading: false, error: "Error updating product" });
     }
   },
 }));
@@ -194,8 +197,8 @@ Bước 3: Sử dụng Store trong Component
 
 ```jsx
 // App.js
-import React, { useEffect } from 'react';
-import useProductStore from './store';
+import React, { useEffect } from "react";
+import useProductStore from "./store";
 
 function App() {
   const products = useProductStore((state) => state.products);
@@ -216,11 +219,11 @@ function App() {
 
   const handleAddProduct = async () => {
     const newProduct = {
-      title: 'New Product',
+      title: "New Product",
       price: 10,
-      description: 'A description',
+      description: "A description",
       categoryId: 1,
-      images: ['https://placeimg.com/640/480/any'],
+      images: ["https://placeimg.com/640/480/any"],
     };
     await addProduct(newProduct);
   };
@@ -231,11 +234,11 @@ function App() {
 
   const handleUpdateProduct = async (productId) => {
     const updatedProduct = {
-      title: 'Updated Product',
+      title: "Updated Product",
       price: 20,
-      description: 'An updated description',
+      description: "An updated description",
       categoryId: 2,
-      images: ['https://placeimg.com/640/480/any'],
+      images: ["https://placeimg.com/640/480/any"],
     };
     await updateProduct(productId, updatedProduct);
   };
@@ -249,8 +252,12 @@ function App() {
         {products.map((product) => (
           <li key={product.id}>
             <strong>{product.title}</strong> - ${product.price}
-            <button onClick={() => handleDeleteProduct(product.id)}>Delete</button>
-            <button onClick={() => handleUpdateProduct(product.id)}>Update</button>
+            <button onClick={() => handleDeleteProduct(product.id)}>
+              Delete
+            </button>
+            <button onClick={() => handleUpdateProduct(product.id)}>
+              Update
+            </button>
           </li>
         ))}
       </ul>
@@ -266,17 +273,15 @@ Trong ví dụ trên, chúng ta đã sử dụng store `useProductStore` và cá
 
 Lưu ý rằng, đây chỉ là một ví dụ đơn giản để minh họa việc sử dụng Zustand với React để quản lý trạng thái và thực hiện các thao tác CRUD. Trong ứng dụng thực tế, bạn có thể cần xử lý nhiều trường hợp và điều kiện hơn.
 
-
 ## Persist middleware
 
 Doc: <https://github.com/pmndrs/zustand/blob/main/docs/integrations/persisting-store-data.md>
 
 **Persist** giúp bạn lưu trữ Zustand state xuống Storage (e.g., localStorage, AsyncStorage, IndexedDB, etc.)
 
-
 ```js
-import { create } from 'zustand'
-import { persist, createJSONStorage } from 'zustand/middleware'
+import { create } from "zustand";
+import { persist, createJSONStorage } from "zustand/middleware";
 
 export const useBearStore = create(
   persist(
@@ -285,11 +290,365 @@ export const useBearStore = create(
       addABear: () => set({ bears: get().bears + 1 }),
     }),
     {
-      name: 'food-storage', // name of the item in the storage (must be unique)
+      name: "food-storage", // name of the item in the storage (must be unique)
       storage: createJSONStorage(() => sessionStorage), // (optional) by default, 'localStorage' is used
     }
   )
-)
-
+);
 ```
+
 Xem ở phần ví dụ tạo giỏ hàng 2.Examples\Shopping-Cart-Zustand
+
+## Authentication and Authorization in React App
+
+Sẽ có các trang bạn cần yêu cầu đăng nhập đã mới cho phép truy cập. Sau đây là cách bạn bảo vệ các Route cần quyền truy cập nhu sau:
+
+### Step 1 - Cấu hình Axios Client
+
+Tạo file src/lib/axiosClient.ts với nội dung sau:
+
+```ts
+import axios from "axios";
+const API_URL = "https://api.escuelajs.co/api/v1/auth";
+
+const axiosClient = axios.create({
+  baseURL: API_URL,
+  headers: {
+    "Content-Type": "application/json",
+  },
+});
+
+// REQUEST
+axiosClient.interceptors.request.use(
+  (config) => {
+    const token = window.localStorage.getItem("token");
+    if (token) {
+      config.headers["Authorization"] = "Bearer " + token;
+    }
+
+    return config;
+  },
+  (error) => {
+    Promise.reject(error);
+  }
+);
+
+// RESPONSE
+
+axiosClient.interceptors.response.use(
+  async (response) => {
+    const { access_token, refresh_token } = response.data;
+    // LOGIN
+    if (access_token) {
+      window.localStorage.setItem("token", access_token);
+    }
+    if (refresh_token) {
+      window.localStorage.setItem("refreshToken", refresh_token);
+    }
+
+    return response;
+  },
+  async (error) => {
+    if (error?.response?.status !== 401) {
+      return Promise.reject(error);
+    }
+
+    const originalConfig = error.config;
+
+    if (error?.response?.status === 401 && !originalConfig.sent) {
+      console.log("Error 🚀", error);
+      originalConfig.sent = true;
+      try {
+        // Trường hợp không có token thì chuyển sang trang LOGIN
+        const token = window.localStorage.getItem("token");
+        if (!token) {
+          window.location.href = "/login";
+          return Promise.reject(error);
+        }
+
+        const refreshToken = window.localStorage.getItem("refreshToken");
+        if (refreshToken) {
+          const response = await axiosClient.post("/refresh-token", {
+            refreshToken: refreshToken,
+          });
+
+          const { access_token } = response.data;
+          window.localStorage.setItem("token", access_token);
+
+          originalConfig.headers = {
+            ...originalConfig.headers,
+            authorization: `Bearer ${access_token}`,
+          };
+
+          return axiosClient(originalConfig);
+        } else {
+          return Promise.reject(error);
+        }
+      } catch (err) {
+        return Promise.reject(err);
+      }
+    }
+  }
+);
+
+export { axiosClient };
+```
+
+### Step 2 - Tạo hook quản lý đăng nhập với zustand
+
+Tạo file src/hooks/useAuth.ts
+
+```ts
+import { create } from "zustand";
+import { axiosClient } from "../lib/axiosClient";
+
+interface User {
+  id: number;
+  email: string;
+  password: string;
+  name: string;
+  role: string;
+  avatar: string;
+}
+
+interface Auth {
+  user: User | null;
+  setUser: (user: User) => void;
+  isAuthenticated: boolean;
+  login: (
+    email: string,
+    password: string
+  ) => Promise<{ isAuthenticated: boolean; error: string }>;
+  logout: () => void;
+}
+
+const useAuth = create<Auth>((set) => ({
+  user: null,
+  setUser: (user: User) => {
+    set({ user });
+  },
+  isAuthenticated: false,
+  login: async (email: string, password: string) => {
+    try {
+      //Gọi API Login
+      const response = await axiosClient.post(
+        "https://api.escuelajs.co/api/v1/auth/login",
+        { email, password }
+      );
+      console.log(response);
+
+      if (response && response.status === 201) {
+        const isAuthenticated = response.status === 201;
+        //Gọi tiếp API lấy thông tin User
+        const { data } = await axiosClient.get(
+          "https://api.escuelajs.co/api/v1/auth/profile"
+        );
+        set({ user: data, isAuthenticated });
+        //Trả về dấu hiệu để components chuyển hướng sau khi login OK
+        return { isAuthenticated, error: "" };
+      } else {
+        return {
+          isAuthenticated: false,
+          error: "Username or password is invalid",
+        };
+      }
+    } catch (error) {
+      return {
+        isAuthenticated: false,
+        error: error?.message || "Login failed",
+      };
+    }
+  },
+  logout: () => {
+    // Xóa trạng thái user và isAuthenticated
+    set({ user: null, isAuthenticated: false });
+    localStorage.removeItem("token");
+    localStorage.removeItem("refreshToken");
+  },
+}));
+
+export default useAuth;
+```
+
+Lưu ý:
+
+- API_URL: Thay đổi url API đúng với backend API
+- Thay đổi các endpoints đúng với backend API của bạn
+
+### Step 3 - Login
+
+Code phần login
+
+```tsx
+import React from "react";
+import { useForm } from "react-hook-form";
+import { yupResolver } from "@hookform/resolvers/yup";
+import * as yup from "yup";
+import { useNavigate } from "react-router-dom";
+import useAuth from "../../hooks/useAuth";
+
+const schema = yup
+  .object({
+    email: yup.string().email().required(),
+    password: yup.string().required(),
+  })
+  .required();
+type FormData = yup.InferType<typeof schema>;
+
+const LoginAPI = () => {
+  const navigate = useNavigate();
+  const { login } = useAuth();
+  const [error, setError] = React.useState<string | null>(null);
+  const {
+    register,
+    handleSubmit,
+    formState: { errors, isSubmitting },
+  } = useForm<FormData>({
+    resolver: yupResolver(schema),
+  });
+  const onSubmit = async (data: FormData) => {
+    console.log(data);
+    const result = await login(data.email, data.password);
+    console.log(result);
+    if (result.isAuthenticated) {
+      navigate("/customers");
+    } else {
+      setError(result.error);
+    }
+  };
+
+  return (
+    <div className="max-w-[300px] mx-auto min-w-[300px]">
+      <h2 className="text-2xl text-center mb-3 font-bold">Login Form</h2>
+      {error && <div>Error: {error}</div>}
+      <form onSubmit={handleSubmit(onSubmit)}>
+        <input placeholder="Email" {...register("email")} />
+        <p>{errors.email?.message}</p>
+
+        <input placeholder="password" {...register("password")} />
+        <p>{errors.password?.message}</p>
+
+        <button className="block w-full" disabled={isSubmitting} type="submit">
+          {isSubmitting ? "Submitting..." : "Login"}
+        </button>
+      </form>
+    </div>
+  );
+};
+
+export default LoginAPI;
+```
+
+### Step 4 - Bảo vệ các trang cần quyền Login
+
+Ví dụ:
+
+|-/ home page --> public
+|-/login login page --> public
+|-/customer customer page --> private
+|-/customer/orders customer page --> private
+|-/customer/profile customer page --> private
+
+Thì bạn lồng các route private lại trong một Layout chung kiểu như
+
+```tsx
+<Route path="customer" element="Customer">
+  <Route path="orders" element="CustomerOrders" />
+  <Route path="profile" element="CustomerProfile" />
+</Route>
+```
+
+Sau đó tại `Customer` bạn check xem user đã đăng nhập chưa bằng cách truy cập vào state `user` từ useAuth
+
+```tsx
+import React from "react";
+import { Outlet, Link } from "react-router-dom";
+import useAuth from "../../hooks/useAuth";
+import { useNavigate } from "react-router-dom";
+1;
+const Customers = () => {
+  const { isAuthenticated, logout } = useAuth();
+  const navigate = useNavigate();
+  React.useEffect(() => {
+    if (!isAuthenticated) {
+      navigate("/login");
+    }
+  }, [isAuthenticated]);
+
+  return (
+    <>
+      <h1 className="py-5">Customers Page</h1>
+      <div className="grid grid-cols-12">
+        <div className="col-span-4">
+          <ul>
+            <li>
+              <Link to={"/customers"}>Dashboard</Link>
+            </li>
+            <li>
+              <Link to={"/customers/orders"}>Danh sách đơn hàng</Link>
+            </li>
+            <li>
+              <Link to={"/customers/profile"}>Thông tin cá nhân</Link>
+            </li>
+            <li>
+              <button type="button" onClick={logout}>
+                Đăng Xuất
+              </button>
+            </li>
+          </ul>
+        </div>
+        <div className="col-span-8">
+          <Outlet />
+        </div>
+      </div>
+    </>
+  );
+};
+
+export default Customers;
+```
+
+### Step 5 - Lấy thông tin User đưa lên Header
+
+Component UserInfo
+
+```tsx
+import useAuth from "../../hooks/useAuth";
+import { Link } from "react-router-dom";
+
+const UserInfo = () => {
+  const { user, logout } = useAuth();
+
+  return (
+    <span>
+      {user ? (
+        <span className="flex gap-x-2 items-center">
+          <img
+            className="rounded-full"
+            width={30}
+            height={30}
+            src={user.avatar}
+            alt={user.name}
+          />
+          <strong>{user.name}</strong>
+          <span
+            className="cursor-pointer border-s border-slate-900 pl-2"
+            onClick={logout}
+          >
+            Đăng xuất
+          </span>
+        </span>
+      ) : (
+        <Link to={"/login"}>Login</Link>
+      )}
+    </span>
+  );
+};
+
+export default UserInfo;
+```
+
+Tham khảo thêm 2 bài viết sau:
+
+- <https://www.robinwieruch.de/react-router-private-routes/>
+- <https://ui.dev/react-router-protected-routes-authentication>
