--- a/1.Lessions/Session-02-JSX-Components-Props/2.2.Components-Props.md
+++ b/1.Lessions/Session-02-JSX-Components-Props/2.2.Components-Props.md
@@ -379,3 +379,5 @@ Tham khảo sử dụng Prop với TypeScript
 Cách nhìn nhận từ một HTML UI làm sao chuyển nó thành React UI hợp lý.
 
 Xem ví dụ: <https://widget-components.vercel.app>
+
+==> [Thêm Css vào Dự Án](2.3.Add-style-Component.md)
