--- a/1.Lessions/Session-10-Global-State-Management/Manage-State/2.Redux-Toolkit.md
+++ b/1.Lessions/Session-10-Global-State-Management/Manage-State/2.Redux-Toolkit.md
@@ -10,6 +10,13 @@ npm install @reduxjs/toolkit react-redux
 yarn add @reduxjs/toolkit react-redux
 ```
 
+Cài thêm Tool Debug
+
+```bash
+yarn add --dev redux-devtools-extension
+yarn add --dev @types/node
+```
+
 ## Bước 2: Tạo Redux Store
 
 Tạo file `src/redux/store.ts`
@@ -17,9 +24,14 @@ Tạo file `src/redux/store.ts`
 ```ts
 import { configureStore } from "@reduxjs/toolkit";
 
-export default configureStore({
+const store = configureStore({
   reducer: {},
+  devTools: process.env.NODE_ENV !== "production",
 });
+
+export default store;
+
+export type RootState = ReturnType<typeof store.getState>;
 ```
 
 Store là nơi lưu trữ Global State cho toàn bộ ứng dụng
@@ -53,13 +65,19 @@ Về bản chất Provider này là useContext, mang store đến với các com
 Tạo mới một file `src/redux/features/counter/counterSlice.ts`
 
 ```ts
-import { createSlice } from "@reduxjs/toolkit";
+import { createSlice, PayloadAction } from "@reduxjs/toolkit";
+
+interface CounterState {
+  count: number;
+}
+
+const initialState: CounterState = {
+  count: 0, //giá trị khởi tạo
+};
 
 export const counterSlice = createSlice({
   name: "counter", //đặt tên cho slice, không trùng lặp
-  initialState: {
-    count: 0, //giá trị khởi tạo state count
-  },
+  initialState,
   reducers: {
     //Hàm tăng count lên 1
     increment: (state) => {
@@ -70,7 +88,7 @@ export const counterSlice = createSlice({
       state.count -= 1;
     },
     //Hàm tăng bởi một số tùy chọn
-    incrementByAmount: (state, action) => {
+    incrementByAmount: (state, action: PayloadAction<number>) => {
       state.count += action.payload;
     },
   },
@@ -97,11 +115,16 @@ Sửa file `src/redux/store.ts`
 import { configureStore } from "@reduxjs/toolkit";
 import counterReducer from "./features/counter/counterSlice";
 
-export default configureStore({
+const store = configureStore({
   reducer: {
-    counter: counterReducer, //Gắn counterReducer vào Store chung
+    counter: counterReducer,
   },
+  devTools: process.env.NODE_ENV !== "production",
 });
+
+export default store;
+
+export type RootState = ReturnType<typeof store.getState>;
 ```
 
 ## Bước 6: Sử dụng Redux State cho Các Component
@@ -109,18 +132,19 @@ export default configureStore({
 Tạo file `src/redux/features/counter/Counter.tsx`
 
 ```tsx
-import React from "react";
 import { useSelector, useDispatch } from "react-redux";
 //Lấy các action từ Slice vào
 import { decrement, increment } from "./counterSlice";
+import { RootState } from "../../store";
 
 export function Counter() {
   //Sử dụng các hooke của react-redux để truy vập vào Store chung
-  const count = useSelector((state) => state.counter.count);
+  const count = useSelector((state: RootState) => state.counter.count);
   const dispatch = useDispatch();
 
   return (
     <div>
+      <h2>Couter Slice</h2>
       <div>
         <button
           aria-label="Increment value"
@@ -144,3 +168,5 @@ export function Counter() {
 ## Bước 7: Import Counter vào App
 
 Import vào và chạy thử
+
+==> Xem ví dụ đầy đủ tại: `2.Examples\example-redux-toolkit`
