bổ sung cách tạo component

--- a/1.Lessions/Session-02-Components-JSX/2.2.Components-Props.md
+++ b/1.Lessions/Session-02-Components-JSX/2.2.Components-Props.md
@@ -34,7 +34,7 @@ Trong Demo trên chúng ta có các button Thêm giỏ hàng, Gọi tư vấn
 
 Thử tạo 2 button đó trong React
 
-Trong file App.tsx bạn thêm đoạn code sau
+Trong file `App.tsx` bạn thêm đoạn code sau
 
 ```js
 //Định nghĩa một component
@@ -66,6 +66,29 @@ function ArticleThumbnail() {
 ```
 
 Kết luận: Với cách định nghĩa trên thì các bạn đã tạo ra được một function component trong React
+
+Ngoài cách định nghĩa bên trong một file `.tsx`. Bạn có thể tách nó ra thành một file component độc lập như kiểu bạn tạo một file .css (external)
+
+Ví dụ như cấu trúc dưới đây.
+
+```code
+react-vite/
+├─ src/
+│  ├─ components/
+│  │  ├─ Button.tsx
+│  ├─ App.tsx
+```
+
+Compponent Button
+
+```jsx
+function Button() {
+  return <button type="button">Button Default</button>;
+}
+export default Button;
+```
+
+Với cách làm này, bạn có thể tái sử dụng UI Button khắp mọi nơi cần đến.
 
 ---
 
