--- a/1.Lessions/Session-02-Components-JSX/2.2.Components-Props.md
+++ b/1.Lessions/Session-02-Components-JSX/2.2.Components-Props.md
@@ -201,8 +201,69 @@ Ví dụ:
 
 - Một thành phần thường xuyên thay đổi nội dung.
 
+---
+
 ## 🔥 Cú Pháp JSX ?
 
 Cách mà làm cho Component trở nên Dynamic hơn
 
 Xem [Giới thiệu về JSX](2.1.Introducing-JSX.md)
+
+---
+
+## 🔥 Sử dụng các Font trong React
+
+## 🌻 Embed icon Font React
+
+- React Icons <https://react-icons.github.io/react-icons>
+
+```bash
+npm install react-icons --save
+```
+
+Usage:
+
+```js
+import { FaBeer } from 'react-icons/fa';
+function MyComponent() {
+  render() {
+    return <h3> Lets go for a <FaBeer />? </h3>
+  }
+}
+```
+
+- Font Awesome: <https://fontawesome.com/v5/docs/web/use-with/react>
+
+## 🌻 Chèn hình vào React
+
+Bước 1: Lưu tất cả hình vào một folder `images` trong thư mục public
+
+Bước 2: Cách sử dụng hình
+
+```jsx
+<img src="./images/ten-hinh.png" alt="" />
+```
+
+Khi ứng dụng chạy thì thư mục public là thư mục gốc
+
+Hoặc với cách sau
+
+```jsx
+//Import dưới dạng biến images
+import images from "./images/ten-hinh.png";
+<img src={images} alt="" />;
+```
+
+Nếu sử dụng với React Vite bạn cần cấu hình thêm `vite.config.ts`
+
+```ts
+//Sửa hàm defineConfig thành như sau
+export default defineConfig({
+  root: "./",
+  build: {
+    outDir: "dist",
+  },
+  publicDir: "public",
+  plugins: [react()],
+});
+```
