--- a/1.Lessions/Session-03-Props-Styles-Component/2.3.Add-style-Component.md
+++ b/1.Lessions/Session-03-Props-Styles-Component/2.3.Add-style-Component.md
@@ -82,61 +82,6 @@ SASS/SCSS là một chương trình tiền xử lý CSS (CSS preprocessor). Nó 
 
 - Học cú pháp: https://www.w3schools.com/sass/default.php
 
-- Dùng với Reacr: https://www.w3schools.com/react/react_sass_styling.asp
+- Dùng với React: https://www.w3schools.com/react/react_sass_styling.asp
 
 Xem thêm hướng dẫn: [Sass](2.5.Sass-React.md)
-
-## 🌻 Embed icon Font React
-
-- React Icons <https://react-icons.github.io/react-icons>
-
-```bash
-npm install react-icons --save
-```
-
-Usage:
-
-```js
-import { FaBeer } from 'react-icons/fa';
-function MyComponent() {
-  render() {
-    return <h3> Lets go for a <FaBeer />? </h3>
-  }
-}
-```
-
-- Font Awesome: <https://fontawesome.com/v5/docs/web/use-with/react>
-
-## 🌻 Chèn hình vào React
-
-Bước 1: Lưu tất cả hình vào một folder `images` trong thư mục public
-
-Bước 2: Cách sử dụng hình
-
-```jsx
-<img src="./images/ten-hinh.png" alt="" />
-```
-
-Khi ứng dụng chạy thì thư mục public là thư mục gốc
-
-Hoặc với cách sau
-
-```jsx
-//Import dưới dạng biến images
-import images from "./images/ten-hinh.png";
-<img src={images} alt="" />;
-```
-
-Nếu sử dụng với React Vite bạn cần cấu hình thêm `vite.config.ts`
-
-```ts
-//Sửa hàm defineConfig thành như sau
-export default defineConfig({
-  root: "./",
-  build: {
-    outDir: "dist",
-  },
-  publicDir: "public",
-  plugins: [react()],
-});
-```
