--- a/1.Lessions/Session-03-Props-Styles-Component/2.3.Add-style-Component.md
+++ b/1.Lessions/Session-03-Props-Styles-Component/2.3.Add-style-Component.md
@@ -76,6 +76,14 @@ npm install styled-components --save
 
 Nhúng các thư viện Css Framework: TailwindCss, Bootstrap
 
+#### Bootstrap
+
+Xem link: https://react-bootstrap.netlify.app/docs/getting-started/introduction
+
+#### TailwindCss
+
+Xem link: https://tailwindcss.com/docs/installation/framework-guides
+
 ### 🔥 6. Sass (Advanced) ?
 
 SASS/SCSS là một chương trình tiền xử lý CSS (CSS preprocessor). Nó giúp bạn viết CSS theo cách của một ngôn ngữ lập trình, có cấu trúc rõ ràng, rành mạch.
