--- a/1.Lessions/Session-02-Components-JSX/2.2.Components-Props.md
+++ b/1.Lessions/Session-02-Components-JSX/2.2.Components-Props.md
@@ -224,15 +224,19 @@ npm install react-icons --save
 Usage:
 
 ```js
-import { FaBeer } from 'react-icons/fa';
+/*
+Để lấy cùng lúc nhiều icon, thì cách nhau = dấu phẩy
+*/
+import { FaBeer, FaHeart } from 'react-icons/fa';
+
 function MyComponent() {
   render() {
-    return <h3> Lets go for a <FaBeer />? </h3>
+    return <h3> Lets go for a <FaBeer />? I am Love  <FaHeart /> Beer </h3>
   }
 }
 ```
 
-- Font Awesome: <https://fontawesome.com/v5/docs/web/use-with/react>
+- Font Awesome: <https://docs.fontawesome.com/web/use-with/react/>
 
 ## 🌻 Chèn hình vào React
 
