--- a/1.Lessions/Session-02-Components-JSX/2.2.Components-Props.md
+++ b/1.Lessions/Session-02-Components-JSX/2.2.Components-Props.md
@@ -218,7 +218,8 @@ Xem [Giới thiệu về JSX](2.1.Introducing-JSX.md)
 - React Icons <https://react-icons.github.io/react-icons>
 
 ```bash
-npm install react-icons --save
+npm i react-icons
+yarn add react-icons
 ```
 
 Usage:
