--- a/1.Lessions/Session-03-Props-Styles-Component/2.4.Encapsulate-a-Component.md
+++ b/1.Lessions/Session-03-Props-Styles-Component/2.4.Encapsulate-a-Component.md
@@ -9,14 +9,13 @@ Qua phần lý thuyết trên thì chúng ta thấy:
 
 Vậy làm thế nào để chúng ta có thể CHUẨN HÓA một component (hay còn gọi đóng gói) để tái sử dụng ở khắp mọi nơi.
 
-
 ## Đóng gói Component
 
 Lấy lại ví dụ Button component
 
 Trong folder components chúng ta tạo ra một folder Button (đặt bằng chính tên của component)
 
-```html
+```txt
 -src
   |-components
         |-Button
@@ -27,11 +26,13 @@ Trong folder components chúng ta tạo ra một folder Button (đặt bằng ch
 - Trong folder Button bạn tạo một file index.js để chứa code của component
 
 ```js
-import styles from './Button.module.css';
+import styles from "./Button.module.css";
 function Button(props) {
   return (
-    <button className={styles.button} type='button'>{props.label}</button>
-  )
+    <button className={styles.button} type="button">
+      {props.label}
+    </button>
+  );
 }
 export default Button;
 ```
@@ -39,13 +40,13 @@ export default Button;
 - Trong folder bạn tạo một file Button.module.css để chứa css
 
 ```css
-.button{
-    padding: 12px 15px;
-    border-radius:5px;
-    background-color: #ff6700;
-    color: #fff;
-    text-align: center;
-    display: inline-flex;
+.button {
+  padding: 12px 15px;
+  border-radius: 5px;
+  background-color: #ff6700;
+  color: #fff;
+  text-align: center;
+  display: inline-flex;
 }
 ```
 
