--- a/1.Lessions/Session-11-Global-State-Management/Manage-State/4.Zustand.md
+++ b/1.Lessions/Session-11-Global-State-Management/Manage-State/4.Zustand.md
@@ -4,7 +4,7 @@
 
 Zustand là một state management library nhanh và dễ dàng mở rộng đang được nhiều người quan tâm hiện nay. Nó được xây dựng bởi các lập trình viên đã tạo ra Jotai và React-springs. Zustand được biết đến bởi tính đơn giản và sử dụng hooks mà không cần theo một kiểu mẫu nhất định.
 
-**Cài đặt:**
+## 🔥 Cài đặt
 
 ```bash
 npm install zustand
@@ -13,9 +13,119 @@ yarn add zustand
 
 Dùng cho TypeScript: <https://github.com/pmndrs/zustand#typescript-usage>
 
-Chúng ta cùng tìm hiểu qua ví dụ sau:
+## 🔥 Tạo một Store với Zustand
 
-## bankSimple với Zustand
+```ts
+import { create } from "zustand";
+
+const useBearStore = create((set) => ({
+  bears: 0,
+  increasePopulation: () => set((state) => ({ bears: state.bears + 1 })),
+  removeAllBears: () => set({ bears: 0 }),
+}));
+```
+
+## 🔥 Cách chập nhật State trong Zustand
+
+```ts
+import { create } from "zustand";
+
+const useBearStore = create((set) => ({
+  bears: 0,
+  increasePopulation: () => set((state) => ({ bears: state.bears + 1 })),
+  removeAllBears: () => set({ bears: 0 }),
+}));
+```
+
+## 🔥 Truy cập State trong Zustand
+
+```ts
+import { create } from "zustand";
+
+const useBearStore = create((set, get) => ({
+  bears: 0,
+  increase: () => set({ bears: get().bears + 1 }),
+}));
+```
+
+## 🔥 Async Action trong Zustand
+
+```ts
+const useFishStore = create((set) => ({
+  fishies: {},
+  fetch: async (pond) => {
+    const response = await fetch(pond);
+    set({ fishies: await response.json() });
+  },
+}));
+```
+
+---
+
+## 🔥 Lưu trữ State đến LocalStorage, SessionStorage với Zustand
+
+**Persist** giúp bạn lưu trữ Zustand state xuống Storage (e.g., localStorage, AsyncStorage, IndexedDB, etc.)
+
+```js
+import { create } from "zustand";
+import { persist, createJSONStorage } from "zustand/middleware";
+
+const useFishStore = create(
+  persist(
+    (set, get) => ({
+      fishes: 0,
+      addAFish: () => set({ fishes: get().fishes + 1 }),
+    }),
+    {
+      name: "food-storage", // name of the item in the storage (must be unique)
+      storage: createJSONStorage(() => sessionStorage), // (optional) by default, 'localStorage' is used
+    }
+  )
+);
+```
+
+Doc: <https://github.com/pmndrs/zustand/blob/main/docs/integrations/persisting-store-data.md>
+
+Xem ở phần ví dụ tạo giỏ hàng 2.Examples\Shopping-Cart-Zustand
+
+---
+
+## 🔥 Debug State trong Zustand
+
+Bước 1: Cài đặt [Redux DevTools Chrome extension](https://chromewebstore.google.com/detail/redux-devtools/lmhkpmbekcpmknklioeibfkpmmfibljd)
+
+Bước 2: Cấu hình Store
+
+```ts
+import { create } from "zustand";
+import { devtools, persist } from "zustand/middleware";
+import type {} from "@redux-devtools/extension"; // required for devtools typing
+
+interface BearState {
+  bears: number;
+  increase: (by: number) => void;
+}
+
+const useBearStore = create<BearState>()(
+  devtools(
+    persist(
+      (set) => ({
+        bears: 0,
+        increase: (by) => set((state) => ({ bears: state.bears + by })),
+      }),
+      {
+        name: "bear-storage",
+      }
+    )
+  )
+);
+```
+
+---
+
+## 🔥 Một số ví dụ về cách Zustand
+
+### 🔷 bankSimple với Zustand
 
 Bước 1: Tạo store
 
@@ -101,7 +211,7 @@ export default App;
 
 Cú pháp và cách sử dụng Zustand khá tương đồng với Redux, nhưng nó có cú pháp ngắn gọn và dễ dàng sử dụng hơn trong một số trường hợp đơn giản
 
-## Ví dụ về Call API
+### 🔷 Ví dụ về Call API
 
 Để thực hiện việc hiển thị danh sách sản phẩm, thêm mới, xóa và cập nhật sản phẩm sử dụng Zustand và React, chúng ta sẽ cần tạo một store để quản lý trạng thái của các sản phẩm và các hàm để thực hiện các thao tác CRUD (Create, Read, Update, Delete). Hãy làm theo các bước sau:
 
@@ -273,33 +383,7 @@ Trong ví dụ trên, chúng ta đã sử dụng store `useProductStore` và cá
 
 Lưu ý rằng, đây chỉ là một ví dụ đơn giản để minh họa việc sử dụng Zustand với React để quản lý trạng thái và thực hiện các thao tác CRUD. Trong ứng dụng thực tế, bạn có thể cần xử lý nhiều trường hợp và điều kiện hơn.
 
-## Persist middleware
-
-Doc: <https://github.com/pmndrs/zustand/blob/main/docs/integrations/persisting-store-data.md>
-
-**Persist** giúp bạn lưu trữ Zustand state xuống Storage (e.g., localStorage, AsyncStorage, IndexedDB, etc.)
-
-```js
-import { create } from "zustand";
-import { persist, createJSONStorage } from "zustand/middleware";
-
-export const useBearStore = create(
-  persist(
-    (set, get) => ({
-      bears: 0,
-      addABear: () => set({ bears: get().bears + 1 }),
-    }),
-    {
-      name: "food-storage", // name of the item in the storage (must be unique)
-      storage: createJSONStorage(() => sessionStorage), // (optional) by default, 'localStorage' is used
-    }
-  )
-);
-```
-
-Xem ở phần ví dụ tạo giỏ hàng 2.Examples\Shopping-Cart-Zustand
-
-## Authentication and Authorization in React App
+### 🔷 Authentication and Authorization in React App
 
 Sẽ có các trang bạn cần yêu cầu đăng nhập đã mới cho phép truy cập. Sau đây là cách bạn bảo vệ các Route cần quyền truy cập nhu sau:
 
