--- a/1.Lessions/Session-03-Props-Styles-Component/2.1Props.md
+++ b/1.Lessions/Session-03-Props-Styles-Component/2.1Props.md
@@ -173,18 +173,14 @@ const Parent = () => {
 
 ### 🌻 Default Props
 
-Trong React, chúng ta cũng có thể sử dụng function để tạo component. Cũng như ES6 React Component, chúng ta cũng có thể định nghĩa thuộc tính defaultProps
+`defaultProps` được ngưng sử dụng từ React 18.3.1.
 
-```js
-function Button(props) {
-  return <button type="button">{props.label}</button>;
+Thay vào đó bạn có thể đặt giá trị mặc định cho props như sau:
+
+```ts
+function Button({ label = "Default" }: { label?: string }) {
+  return <button type="button">{label}</button>;
 }
-// Kiểu như là đặt giá trị dự phòng, nếu ko truyền thì nó lấy giá trị mặc định hiển thị.
-Button.defaultProps = {
-  label: "Button Label",
-  color: "#fff",
-  bgColor: "#ff6700",
-};
 ```
 
 ---
