update ly thuyet

--- a/1.Lessions/Session-11-Global-State-Management/Manage-State/4.Zustand.md
+++ b/1.Lessions/Session-11-Global-State-Management/Manage-State/4.Zustand.md
@@ -1,8 +1,27 @@
 # State management với Zustand
 
+## Giới thiệu
+
 ![Zustand](https://github.com/pmndrs/zustand/raw/main/docs/bear.jpg)
 
 Zustand là một state management library nhanh và dễ dàng mở rộng đang được nhiều người quan tâm hiện nay. Nó được xây dựng bởi các lập trình viên đã tạo ra Jotai và React-springs. Zustand được biết đến bởi tính đơn giản và sử dụng hooks mà không cần theo một kiểu mẫu nhất định.
+
+## Tại sao cần Quản lý Trạng Thái Toàn Cầu?
+
+Hãy nhớ lại ví dụ về "prop drilling" với `useContext`. `useContext` là một giải pháp tốt cho việc truyền dữ liệu xuống dưới cây component. Tuy nhiên, nếu bạn có:
+
+* **Trạng thái cần được chia sẻ giữa các component không có quan hệ cha-con trực tiếp (sibling components, hoặc component ở các nhánh cây khác nhau).**
+* **Trạng thái phức tạp cần cập nhật thường xuyên từ nhiều nơi.**
+* **Bạn muốn tách biệt logic trạng thái ra khỏi các component UI để dễ tái sử dụng và kiểm thử.**
+
+Trong những trường hợp này, việc dùng các Hook như `useState` hay `useReducer` trong component cục bộ không còn phù hợp. Các thư viện quản lý trạng thái toàn cầu như Redux, MobX, Recoil, Jotai, và **Zustand** được sinh ra để giải quyết vấn đề này.
+
+**Zustand nổi bật vì:**
+
+* **Siêu nhỏ gọn:** Kích thước bundle rất nhỏ.
+* **Đơn giản:** API trực quan và dễ học, không có boilerplate (mã khởi tạo) phức tạp.
+* **Không cần Context Provider:** Không giống như Redux hoặc thậm chí `useContext`, bạn không cần bao bọc ứng dụng của mình bằng một `Provider` cấp cao nhất. Các store của Zustand có thể được sử dụng ở bất cứ đâu.
+* **Hiệu suất:** Tối ưu hóa việc re-render component chỉ khi trạng thái thực sự thay đổi.
 
 ## 🔥 Cài đặt
 
@@ -12,6 +31,14 @@ yarn add zustand
 ```
 
 Dùng cho TypeScript: <https://github.com/pmndrs/zustand#typescript-usage>
+
+## 🔥 Cách hoạt động cơ bản của Zustand
+
+Zustand hoạt động dựa trên khái niệm **"store"**. Một store là nơi chứa trạng thái toàn cục của bạn và các hàm để cập nhật trạng thái đó.
+
+1. **Tạo một store:** Sử dụng hàm `create` từ `zustand`.
+2. **Định nghĩa trạng thái và các hành động (actions) trong store.**
+3. **Sử dụng store trong component:** Dùng Hook `useStore` (do `create` tạo ra) để lấy trạng thái hoặc các hành động.
 
 ## 🔥 Tạo một Store với Zustand
 
@@ -556,8 +583,8 @@ export default useAuth;
 
 Lưu ý:
 
-- API_URL: Thay đổi url API đúng với backend API
-- Thay đổi các endpoints đúng với backend API của bạn
+* API_URL: Thay đổi url API đúng với backend API
+* Thay đổi các endpoints đúng với backend API của bạn
 
 ### Step 3 - Login
 
@@ -734,5 +761,5 @@ export default UserInfo;
 
 Tham khảo thêm 2 bài viết sau:
 
-- <https://www.robinwieruch.de/react-router-private-routes/>
-- <https://ui.dev/react-router-protected-routes-authentication>
+* <https://www.robinwieruch.de/react-router-private-routes/>
+* <https://ui.dev/react-router-protected-routes-authentication>
